# query_generator_app

./: .flake8  .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  main.py  pyproject.toml
app/: main.py  prompts.py
config/: databases.example.yaml  query_constraints.example.yaml
lib/: prompts.py
tests/: test_databases.yaml  test_main.py  test_query_constraints.yaml
